# tractoencoder_gsoc

./: .gitignore  README.md  pyproject.toml
gsoc_final_post/: inigo_tellaetxe_gsoc_2024_final_report.rst  override.css
notebooks/: create_labeled_fibercup_ds.ipynb  evaluate_cond_vae_mse.ipynb  experiments_keras.ipynb  experiments_manual_weight_transfer.ipynb  experiments_torch_onnx_tf.ipynb  h5py_sandbox.ipynb  load_keras_and_inference.ipynb  sandbox_vae.ipynb  seg_bundles_fibercup.ipynb  t_sne_sandbox.ipynb
resources/: autoencoder_example.py  keras_vae_example.py  keras_vae_jon_haitz.py  regression_cvae_example.py  regression_cvae_structured.py
scripts/: init_ae_model.py  init_vae_model.py  train_adv_ae_model.py  train_ae_model_hdf5.py  train_ae_model_trk.py  train_cond_vae_model_trk.py  train_vae_model_no_kl_trk.py  train_vae_model_trk.py
src/tractoencoder_gsoc/: ae_model.py  data_loader.py  prior.py  utils.py
src/tractoencoder_gsoc/models/: adv_ae_model.py  ae_model.py  cond_vae_model.py  cvae_model.py  vae_gpt_model.py  vae_model.py  vae_model_no_kl.py
src/tractoencoder_gsoc/trainers/: adv_vae_trainer.py
tests/: test_ae_model.py
